# hexxer

./: .gitignore  CMakeLists.txt  README.md  configuration.cuh  gpu.cu  gpu.h  hexagon.c  hexagon.cuh  hexagon.h  main.c  memory.c  memory.cuh  memory.h  report.c  report.h  reportTemplate.html
testing/: timed-run-2020-03-21.txt
